anchor tag added

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
   <body>
     <h1>Welcome to Git Hub Demo</h1>
     <b> introduction to Git</b>
+    <a href="home.html"> click here for home page</a>
   </body>
 </html>
